# IBMRS

./: .example.env  .gitignore  DATABASE_INTEGRATION.md  PLAYLIST_COVERS_UPDATE.md  PLAYLIST_DISPLAY_UPDATES.md  README.md  app.py  package-lock.json  pyproject.toml  requirements.txt
chroma/: chromaInit.py
database/: README.md  __init__.py  config.py
database/models/: __init__.py  playlist.py  playlist_song.py  song.py  user.py
database/scripts/: create_database.py  init_db.py  reset_db.py
database/seeders/: seed.py
llama_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: ChromaClient.py  LlamaClient.py  app.py  config.py  llama.py
static/css/: global.css  ideas.txt
templates/: Base.html  index.html  playlists.html
