[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-python"
version = "0.1.0"
description = "A CLI chatbot using Llama LLM"
readme = "README.md"
authors = [{name = "Your Name", email = "your@email.com"}]
license = "MIT"
dependencies = [
    "ollama==0.4.4",
    "python-dotenv==1.0.0",
]

[project.scripts]
start-chat = "app:main"

[tool.setuptools]
py-modules = ["app", "llama"]